--- a/public/index.html
+++ b/public/index.html
@@ -21,15 +21,13 @@
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
-        <p class="navbar-text navbar-right">
-          <a href="/api/login" class="btn btn-primar">Login com Spotify</a>
-        </p>
+
       </div>
     </nav>
 
     <div>
       <div class="container">
-        <div ng-view class="jumbotron"></div>
+        <div ng-view></div>
       </div>
     </div>
 
